[gd_scene load_steps=10 format=3 uid="uid://dvka2vu22yig"]

[ext_resource type="Script" uid="uid://b6fahd4e54l24" path="res://Scripts/main.gd" id="1_1ehe0"]
[ext_resource type="Texture2D" uid="uid://c51eg2mfpcijs" path="res://Assets/parallax_forest_pack web/v1/previewpng.png" id="1_28flt"]
[ext_resource type="FontFile" uid="uid://jqn3e02qe0en" path="res://Fonts/Minecraft.ttf" id="2_48xlc"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_48xlc"]
texture = ExtResource("1_28flt")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1ehe0"]
bg_color = Color(0, 0, 0, 0.39215687)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_28flt"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_48xlc"]
bg_color = Color(0.78775924, 0.78775924, 0.78775924, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ce3w2"]
bg_color = Color(0.6255971, 0.6255971, 0.6255971, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_48xlc"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1ehe0")

[node name="BG" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_48xlc")

[node name="Overlay" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1ehe0")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -67.0
offset_top = 103.0
offset_right = 67.0
offset_bottom = 183.00002
grow_horizontal = 2
theme_override_colors/font_color = Color(0.99999994, 0.9133378, 0.8359792, 1)
theme_override_fonts/font = ExtResource("2_48xlc")
theme_override_font_sizes/font_size = 80
text = "Fall"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.25
offset_top = -51.265
offset_right = 100.25
offset_bottom = 127.48517
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_28flt")
theme_override_styles/pressed = SubResource("StyleBoxFlat_48xlc")
theme_override_styles/hover = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/focus = SubResource("StyleBoxEmpty_48xlc")
text = "Play"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_28flt")
theme_override_styles/pressed = SubResource("StyleBoxFlat_48xlc")
theme_override_styles/hover = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/focus = SubResource("StyleBoxEmpty_48xlc")
text = "Options"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_28flt")
theme_override_styles/pressed = SubResource("StyleBoxFlat_48xlc")
theme_override_styles/hover = SubResource("StyleBoxFlat_ce3w2")
theme_override_styles/focus = SubResource("StyleBoxEmpty_48xlc")
text = "Exit"

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
